<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SettingsActivity2">

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:shrinkColumns="3">

    <TableRow android:id="@+id/LifeStoryLines"
        android:background="@color/white"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="3dip">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textLifeStoryLines"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/life_story_lines"
                android:textStyle="bold"
                android:textSize="22sp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/show_life_story_lines" />
        </LinearLayout>
                <Spinner
                    android:id="@+id/lifeStoryLinesSpinner"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@color/white"
                    android:spinnerMode="dropdown"/>
                <Switch
                    android:id="@+id/lifeStorySwitch"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_column="2"/>
    </TableRow>
    <View
        android:layout_width="fill_parent"
        android:layout_height="1.5dp"
        android:background="@color/colorAccent" />

        <TableRow android:id="@+id/SpouseLines"
            android:background="@color/white"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="3dip">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textSpouseLines"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/spouse_lines"
                    android:textStyle="bold"
                    android:textSize="22sp"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/show_spouse_lines" />
            </LinearLayout>
            <Spinner
                android:id="@+id/SpouseLinesSpinner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:spinnerMode="dropdown"/>
            <Switch
                android:id="@+id/spouseSwitch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="2"/>

    </TableRow>
    <View
        android:layout_width="fill_parent"
        android:layout_height="1.5dp"
        android:background="@color/colorAccent" />

        <TableRow android:id="@+id/FamilyTreeLines"
            android:background="@color/white"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="3dip">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textFamilyTreeLines"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/family_tree_lines"
                    android:textStyle="bold"
                    android:textSize="22sp"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/show_family_tree_lines" />
            </LinearLayout>
            <Spinner
                android:id="@+id/FamilyTreeLinesSpinner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:spinnerMode="dropdown"/>
            <Switch
                android:id="@+id/familySwitch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="2" />

        </TableRow>

        <View
            android:layout_width="fill_parent"
            android:layout_height="1.5dp"
            android:background="@color/colorAccent" />

        <TableRow android:id="@+id/MapType"
            android:background="@color/white"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="3dip">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textForMapType"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/map_type"
                    android:textStyle="bold"
                    android:textSize="22sp"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/background_display_on_map" />
            </LinearLayout>
            <Spinner
                android:id="@+id/MapTypeSpinner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:spinnerMode="dropdown"/>

        </TableRow>

        <View
            android:layout_width="fill_parent"
            android:layout_height="1.5dp"
            android:background="@color/colorAccent" />

        <TableRow android:id="@+id/ReSync"
            android:background="@color/white"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="3dip">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textForReSyncData"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/re_sync_data"
                    android:textStyle="bold"
                    android:textSize="22sp"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/from_familymap_service" />
            </LinearLayout>
        </TableRow>

        <View
            android:layout_width="fill_parent"
            android:layout_height="1.5dp"
            android:background="@color/colorAccent" />

        <TableRow android:id="@+id/logout"
            android:background="@color/white"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="3dip">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textForLogout"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/logout"
                    android:textStyle="bold"
                    android:textSize="22sp"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/returns_to_login_screen" />
            </LinearLayout>
        </TableRow>
    </TableLayout>

</android.support.constraint.ConstraintLayout>