<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PersonActivity">

    <TableLayout
        android:id="@+id/top_of_table"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TableRow android:id="@+id/firstNameRow"
            android:background="@color/white"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="3dip">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/personFirstName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:textSize="22sp"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/formal_firstName" />
            </LinearLayout>
        </TableRow>
        <View
            android:layout_width="fill_parent"
            android:layout_height="1.5dp"
            android:background="@color/colorAccent" />

        <TableRow android:id="@+id/lastNameRow"
            android:background="@color/white"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="3dip">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

            <TextView
                android:id="@+id/personLastName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:textSize="22sp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/formal_lastName" />
            </LinearLayout>

        </TableRow>
        <View
            android:layout_width="fill_parent"
            android:layout_height="1.5dp"
            android:background="@color/colorAccent" />

        <TableRow android:id="@+id/genderRow"
            android:background="@color/white"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="3dip">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/personGender"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:textSize="22sp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/formal_gender" />
        </LinearLayout>

    </TableRow>
        <View
            android:layout_width="fill_parent"
            android:layout_height="1.5dp"
            android:background="@color/colorAccent" />

        <android.support.v7.view.menu.ExpandedMenuView
            android:id="@+id/LifeEventsExpandable"/>

        <ExpandableListView
            android:id="@+id/expandableListView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:divider="@color/colorAccent"
            android:dividerHeight="1.5dp"
            android:indicatorLeft="?android:attr/expandableListPreferredItemIndicatorLeft" />
    </TableLayout>

</android.support.constraint.ConstraintLayout>